[gd_scene load_steps=4 format=3 uid="uid://ca6tfywq8r674"]

[ext_resource type="Script" path="res://prog_calculator.gd" id="1_0b1mr"]

[sub_resource type="LabelSettings" id="LabelSettings_c84sy"]
font_size = 31

[sub_resource type="LabelSettings" id="LabelSettings_h8l2p"]
font_size = 70

[node name="progCalculator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0b1mr")

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 116.0
offset_right = 492.0
offset_bottom = 203.0

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 233.0
offset_right = 494.0
offset_bottom = 320.0

[node name="Line" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.031
offset_left = 2.0
offset_top = 341.0
offset_right = 1135.42
offset_bottom = 333.912

[node name="Result_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 370.0
offset_right = 175.0
offset_bottom = 413.0
text = "RESULTS:"
label_settings = SubResource("LabelSettings_c84sy")

[node name="Watermark_Label" type="Label" parent="."]
layout_mode = 1
offset_right = 251.0
offset_bottom = 44.0
text = "Calculator.com "
label_settings = SubResource("LabelSettings_c84sy")

[node name="Operators_Label" type="Label" parent="."]
layout_mode = 1
offset_left = 638.0
offset_top = 48.0
offset_right = 889.0
offset_bottom = 92.0
text = "OPERATORS"
label_settings = SubResource("LabelSettings_c84sy")
horizontal_alignment = 1

[node name="lblOut" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -266.0
offset_top = -274.0
offset_right = 266.0
grow_horizontal = 2
grow_vertical = 0
text = "()"
label_settings = SubResource("LabelSettings_h8l2p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnAdd" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.054
offset_left = 647.0
offset_top = 105.0
offset_right = 695.112
offset_bottom = 140.008
text = "+"

[node name="btnMul" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.054
offset_left = 647.0
offset_top = 184.0
offset_right = 695.112
offset_bottom = 219.008
text = "*"

[node name="btnSub" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.054
offset_left = 728.0
offset_top = 105.0
offset_right = 776.112
offset_bottom = 140.008
text = "-"

[node name="btnDiv" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.054
offset_left = 728.0
offset_top = 184.0
offset_right = 776.112
offset_bottom = 219.008
text = "/"

[node name="btnMod" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.054
offset_left = 811.0
offset_top = 105.0
offset_right = 859.112
offset_bottom = 140.008
text = "MOD"

[node name="btnPow" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.054
offset_left = 811.0
offset_top = 184.0
offset_right = 859.112
offset_bottom = 219.008
text = "**"

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 521.0
offset_top = 279.0
offset_right = 783.0
offset_bottom = 329.0
text = "CALCULATE"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 799.0
offset_top = 277.0
offset_right = 1061.0
offset_bottom = 327.0
text = "CLEAR"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 999.0
offset_top = 14.0
offset_right = 1140.0
offset_bottom = 71.0
text = "EXIT"

[connection signal="pressed" from="btnAdd" to="." method="_on_btn_add_pressed"]
[connection signal="pressed" from="btnMul" to="." method="_on_btn_mul_pressed"]
[connection signal="pressed" from="btnSub" to="." method="_on_btn_sub_pressed"]
[connection signal="pressed" from="btnDiv" to="." method="_on_btn_div_pressed"]
[connection signal="pressed" from="btnMod" to="." method="_on_btn_mod_pressed"]
[connection signal="pressed" from="btnPow" to="." method="_on_btn_pow_pressed"]
[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
